# skoltech_segmentation_hack

./: README.md  YOLO_seg.ipynb  blending.ipynb  gen_dataset.py  mmseg-moscow.ipynb  pspnet-train.ipynb  unet_train.ipynb
interface/: db.sqlite3  dev.config.toml  pyproject.toml
interface/backend/: celery.py  settings.py  urls.py
interface/backend/api/: admin.py  models.py  tasks.py  views.py
interface/backend/api/migrations/: 0001_initial.py
interface/static/css/: drf-theme.css
interface/templates/rest_framework/: base.html
